Update ScrappingX notebook to use placeholder credentials for login

--- a/src/WebScrapping/ScrappingX.ipynb
+++ b/src/WebScrapping/ScrappingX.ipynb
@@ -97,13 +97,13 @@
     "# 🔹 Iniciar sesión en Twitter/X\n",
     "try:\n",
     "    username_input = driver.find_element(By.NAME, \"text\")  # Buscar campo de usuario\n",
-    "    username_input.send_keys(\"seduardolothric@gmail.com\")  # 🔹 Reemplaza con tu usuario o correo\n",
+    "    username_input.send_keys(\"correo\")  # 🔹 Reemplaza con tu usuario o correo\n",
     "    username_input.send_keys(Keys.RETURN)\n",
     "    \n",
     "    time.sleep(3)  # Esperar la transición al siguiente campo\n",
     "\n",
     "    password_input = driver.find_element(By.NAME, \"password\")  # Buscar campo de contraseña\n",
-    "    password_input.send_keys(\"Lalisa500.\")  # 🔹 Reemplaza con tu contraseña\n",
+    "    password_input.send_keys(\"contraseña\")  # 🔹 Reemplaza con tu contraseña\n",
     "    password_input.send_keys(Keys.RETURN)\n",
     "\n",
     "    time.sleep(5)  # Esperar a que cargue la cuenta\n",
