Reset execution counts and clean up error outputs in ScrappingX notebook

--- a/src/WebScrapping/ScrappingX.ipynb
+++ b/src/WebScrapping/ScrappingX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,49 +60,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Error al iniciar sesión: Message: \n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF690FBFE45+26629]\n",
-      "\t(No symbol) [0x00007FF690F26010]\n",
-      "\t(No symbol) [0x00007FF690DB931A]\n",
-      "\t(No symbol) [0x00007FF690E0F8E7]\n",
-      "\t(No symbol) [0x00007FF690E0FB1C]\n",
-      "\t(No symbol) [0x00007FF690E634A7]\n",
-      "\t(No symbol) [0x00007FF690E37AEF]\n",
-      "\t(No symbol) [0x00007FF690E60169]\n",
-      "\t(No symbol) [0x00007FF690E37883]\n",
-      "\t(No symbol) [0x00007FF690E00550]\n",
-      "\t(No symbol) [0x00007FF690E01803]\n",
-      "\tGetHandleVerifier [0x00007FF6913172BD+3529853]\n",
-      "\tGetHandleVerifier [0x00007FF69132DA22+3621858]\n",
-      "\tGetHandleVerifier [0x00007FF6913224D3+3575443]\n",
-      "\tGetHandleVerifier [0x00007FF69108B77A+860474]\n",
-      "\t(No symbol) [0x00007FF690F3088F]\n",
-      "\t(No symbol) [0x00007FF690F2CBC4]\n",
-      "\t(No symbol) [0x00007FF690F2CD66]\n",
-      "\t(No symbol) [0x00007FF690F1C2C9]\n",
-      "\tBaseThreadInitThunk [0x00007FFB2E227374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFB2F61CC91+33]\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # 🔹 Iniciar sesión en Twitter/X\n",
     "# try:\n",
@@ -136,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -157,55 +115,57 @@
       "╒═════╤════════════════════════╤═════════════╕\n",
       "│   # │ Tendencia              │ Posts       │\n",
       "╞═════╪════════════════════════╪═════════════╡\n",
-      "│   1 │ Jalisco                │ 136K posts  │\n",
+      "│   1 │ Jalisco                │ 139K posts  │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│   2 │ #LutoNacional          │ 9,445 posts │\n",
+      "│   2 │ Madrid                 │ 346K posts  │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│   3 │ Vive Feliz             │ 1,785 posts │\n",
+      "│   3 │ Vive Feliz             │ 1,921 posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│   4 │ Alfaro                 │ 22.5K posts │\n",
+      "│   4 │ #LutoNacional          │ 10.9K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│   5 │ Liverpool              │ 484K posts  │\n",
+      "│   5 │ Richard                │ 63.1K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│   6 │ #FelizMiércoles        │ 7,446 posts │\n",
+      "│   6 │ Alfaro                 │ 23.8K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│   7 │ Real Madrid            │ 123K posts  │\n",
+      "│   7 │ #FelizMiércoles        │ 7,628 posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│   8 │ #MásAcciónMásDiversión │ 41K posts   │\n",
+      "│   8 │ Liverpool              │ 459K posts  │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│   9 │ Roro                   │ 44.6K posts │\n",
+      "│   9 │ Calderón               │ 21.5K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  10 │ Lilo                   │ 25.7K posts │\n",
+      "│  10 │ Roro                   │ 39.9K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  11 │ KARIME X L'ORÉAL       │ 52.6K posts │\n",
+      "│  11 │ Ancelotti              │ 13.6K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  12 │ #KornoTuitero          │ 19.9K posts │\n",
+      "│  12 │ Cachorro               │ 18.8K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  13 │ Dortmund               │ 14.4K posts │\n",
+      "│  13 │ Lilo                   │ 49.2K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  14 │ #BernardoPicks         │ 45K posts   │\n",
+      "│  14 │ #MásAcciónMásDiversión │ 25.8K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  15 │ Calderón               │ 1,056 posts │\n",
+      "│  15 │ #kornotuitero          │ 1,189 posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  16 │ Reynosa                │ 115K posts  │\n",
+      "│  16 │ KARIME X L'ORÉAL       │ 56.8K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  17 │ Lille                  │ 947K posts  │\n",
+      "│  17 │ #BernardoPicks         │ 46K posts   │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  18 │ Don Goyo               │ 15.2K posts │\n",
+      "│  18 │ Don Goyo               │ 14.7K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  19 │ Lamine Yamal           │ 8,699 posts │\n",
+      "│  19 │ Dortmund               │ 104K posts  │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  20 │ Tesla                  │ 93.2K posts │\n",
+      "│  20 │ Lille                  │ 9,346 posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  21 │ Ayotzinapa             │ 18.8K posts │\n",
+      "│  21 │ Reynosa                │ 14.9K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  22 │ Jean Grey              │ 19.3K posts │\n",
+      "│  22 │ Lamine Yamal           │ 914K posts  │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  23 │ Darwin                 │ 8,668 posts │\n",
+      "│  23 │ Brahim                 │ 20.9K posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  24 │ Cachorro               │ 11.2K posts │\n",
+      "│  24 │ Ayotzinapa             │ 8,770 posts │\n",
       "├─────┼────────────────────────┼─────────────┤\n",
-      "│  25 │ Sadie Sink             │ 16.3K posts │\n",
+      "│  25 │ Tesla                  │ 11.4K posts │\n",
+      "├─────┼────────────────────────┼─────────────┤\n",
+      "│  26 │ Krispy Kreme           │ 5,017 posts │\n",
       "╘═════╧════════════════════════╧═════════════╛\n"
      ]
     }
